// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge badge should support float number 1`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="3.5"
  >
    3.5
  </sup>
</span>
`;

exports[`Badge badge should support float number 2`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="3.5"
  >
    3.5
  </sup>
</span>
`;

exports[`Badge render Badge status/color when contains children 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status"
  >
    <a />
    <sup
      class="ant-scroll-number ant-badge-dot ant-badge-status-success"
      data-show="true"
      title="5"
    />
  </span>
  <span
    class="ant-badge ant-badge-status"
  >
    <a />
    <sup
      class="ant-scroll-number ant-badge-dot ant-badge-status-blue"
      data-show="true"
      title="5"
    />
  </span>
  <span
    class="ant-badge ant-badge-status"
  >
    <a />
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
      style="background: rgb(0, 136, 204);"
      title="5"
    />
  </span>
</div>
`;

exports[`Badge render correct with negative number 1`] = `
<div>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="-10"
    >
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          -
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          1
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          0
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="-10"
    >
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          -
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          1
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition: none;"
      >
        <p
          class="ant-scroll-number-only-unit current"
        >
          0
        </p>
      </span>
    </sup>
  </span>
</div>
`;

exports[`Badge rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper ant-badge-rtl"
/>
`;

exports[`Badge rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="ant-badge ant-badge-rtl"
>
  <a
    class="head-example"
    href="#"
  >
    head
  </a>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    style="margin-top:10px;left:10px"
    title="5"
  >
    <span
      class="ant-scroll-number-only"
      style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
    >
      <p
        class="ant-scroll-number-only-unit"
      >
        0
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        1
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        2
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        3
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        4
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        5
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        6
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        7
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        8
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        9
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        0
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        1
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        2
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        3
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        4
      </p>
      <p
        class="ant-scroll-number-only-unit current"
      >
        5
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        6
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        7
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        8
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        9
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        0
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        1
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        2
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        3
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        4
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        5
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        6
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        7
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        8
      </p>
      <p
        class="ant-scroll-number-only-unit"
      >
        9
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should be compatible with borderColor style 1`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    style="background-color: rgb(255, 255, 255); color: rgb(153, 153, 153); border-color: #d9d9d9; box-shadow: 0 0 0 1px #d9d9d9 inset;"
    title="4"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        4
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should render when count is changed 1`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="10"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        1
      </p>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
        style=""
      >
        0
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should render when count is changed 2`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="11"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        1
      </p>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
        style=""
      >
        1
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should render when count is changed 3`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="11"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        1
      </p>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
        style=""
      >
        1
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should render when count is changed 4`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="111"
  >
    99+
  </sup>
</span>
`;

exports[`Badge should render when count is changed 5`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="10"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        1
      </p>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
      >
        0
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should render when count is changed 6`] = `
<span
  class="ant-badge ant-badge-not-a-wrapper"
>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    title="9"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <p
        class="ant-scroll-number-only-unit current"
        style=""
      >
        9
      </p>
    </span>
  </sup>
</span>
`;

exports[`Badge should support offset when count is a ReactNode 1`] = `
<span
  class="ant-badge"
>
  <a
    class="head-example"
    href="#"
  >
    head
  </a>
  <span
    class="ant-scroll-number-custom-component custom"
    style="margin-top: 20px; right: -10px; color: rgb(245, 34, 45);"
  />
</span>
`;

exports[`Ribbon rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-ribbon-wrapper"
>
  <div
    class="ant-ribbon ant-ribbon-placement-end ant-ribbon-rtl"
  >
    <span
      class="ant-ribbon-text"
    />
    <div
      class="ant-ribbon-corner"
    />
  </div>
</div>
`;
